tests/baselines/reference/constructorArgsErrors1.errors.txt
tests/cases/compiler/constructorArgsErrors1.ts(2,18): error TS1090: 'static' modifier cannot appear on a parameter.


==== tests/cases/compiler/constructorArgsErrors1.ts (1 errors) ====
    class foo {
        constructor (static a: number) {
                     ~~~~~~
!!! error TS1090: 'static' modifier cannot appear on a parameter.
        }
    }